# skivvy-fserver

./: .gitignore  Makefile.am  README.md  autogen.sh  configure-debug.conf.example  configure-debug.sh  configure-release.conf.example  configure-release.sh  configure.ac
data/: fserver-en.conf
docs/: fserver-manual.text  todo.txt
m4/: ax_cxx_compile_stdcxx_14.m4
src/: Makefile.am  plugin-fserver.cpp  test.cpp
src/include/skivvy/: plugin-fserver.h
